# wilhelm_ws1

camerawork/: CMakeLists.txt  look_for_tf.py  package.xml  robotino_target_select.py
camerawork/camerainfo/: camera0.yaml  camera1.yaml  camera2.yaml
camerawork/launch/: 0406_tfdebug.launch  basic_ar_locations.launch  basic_camera_locations.launch  launch_computer.launch  my_alvar@camera0.launch  my_alvar@camera1.launch  my_alvar@camera1_no_remapping.launch  my_alvar@camera2.launch  my_usb_cam@video0.launch  my_usb_cam@video0_with_normal_file.launch  my_usb_cam@video1.launch  my_usb_cam@video2.launch  runall.launch  temp_location_calib.launch
nodes_on_computer/: CMakeLists.txt  package.xml
nodes_on_robotino/: 1080_new_cam.yaml  CMakeLists.txt  package.xml
nodes_on_robotino/launch/: launch_robotino.launch
simple_robotino_messages/: CMakeLists.txt  package.xml
simple_robotino_messages/msg/: RobotinoDistanceArray.msg
simple_robotino_messages/srv/: ProcessCorrdination.srv  SetField.srv
simple_robotino_node/: CMakeLists.txt  package.xml  pinstuff.cpp  pinteststuff.cpp  twisteg.py
simple_robotino_node/src/: main.cpp
